# competitive-runner

./: CMakeLists.txt  configure.bat
runner/: CMakeLists.txt  run.cpp
woche1/: CMakeLists.txt
woche1/aufg1/: CMakeLists.txt  main.cpp  sample.in
